--- a/templates/resume.html
+++ b/templates/resume.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - Ravi Shankar Das</title>
-    <link rel="stylesheet" href="/static/resume.css"> <!-- Link to CSS file -->
-    <style>
-       
-    </style>
+    <title>Resume</title>
+    <link rel="stylesheet" href="/static/resume.css">
+    <!-- <style>
+        
+    </style> -->
 </head>
 <body>
-    <!-- Back to Home Button -->
-    <div class="pdf-container">
-        <a href="/" class="back-button">Home</a>
-    </div>
-
-    <!-- Display the Resume PDF -->
+        <!-- Display the Resume PDF -->
     <div class="pdf-container">
         <iframe src="/static/Ravi_CV_1.pdf"></iframe> <!-- Replace with your resume's actual path -->
     </div>
