user creation done

--- a/templates/acheivements.html
+++ b/templates/acheivements.html
@@ -87,6 +87,7 @@
 
         <h2>Extra-Curricular Activities</h2>
         <ul>
+            <li>Secured a global rank of 542 out of 13626 and india rank of 55 out of 3702 in the qualification round of meta hacker cup 2024.</li>
             <li>Earned 6* and 5* ratings in Problem Solving and C++ on HackerRank.</li>
             <li>Resolved over 500 problems on LeetCode, with a highest contest rating of 1421.</li>
             <li>Completed more than 500 problems on Codeforces, achieving a maximum contest rating of 981 (Grey).</li>
