--- a/templates/resume.html
+++ b/templates/resume.html
@@ -12,7 +12,7 @@
 <body>
         <!-- Display the Resume PDF -->
     <div class="pdf-container">
-        <iframe src="/static/Ravi_CV_1.pdf"></iframe> <!-- Replace with your resume's actual path -->
+        <iframe src="/static/Ravi_CV.pdf"></iframe> <!-- Replace with your resume's actual path -->
     </div>
 </body>
 </html>
